--- a/programs/linux/yarpStreamingDesktop/sender/CMakeLists.txt
+++ b/programs/linux/yarpStreamingDesktop/sender/CMakeLists.txt
@@ -1,9 +1,8 @@
-# YARP Streaming Desktop: Emisor
-
+# yarpStreamingDesktop: Emisor
 cmake_minimum_required(VERSION 2.8)  # Versión mínima que exigimos de CMake, que va ampliando sus capacidades
-add_executable(emisor_desktop main.cpp)  # Compilar main.cpp y other.cpp, enlazarlos, y llamar ejecutable al binario generado
+add_executable(yarpStreamingDesktopSender main.cpp)  # Compilar main.cpp y other.cpp, enlazarlos, y llamar ejecutable al binario generado
 find_package(YARP REQUIRED)  # Nombre de la librería, buscará un módulo de CMake (que define las variables utilizadas a continuación) con este nombre. REQUIRED indica que lo exigimos.
 find_package(OpenCV REQUIRED)  # Nombre de la librería, buscará un módulo de CMake (que define las variables utilizadas a continuación) con este nombre. REQUIRED indica que lo exigimos.
-target_link_libraries(emisor_desktop ${OpenCV_LIBS})
-target_link_libraries(emisor_desktop ${YARP_LIBRARIES})
+target_link_libraries(yarpStreamingDesktopSender ${OpenCV_LIBS})
+target_link_libraries(yarpStreamingDesktopSender ${YARP_LIBRARIES})
 
